5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3991/executions/1573_1330.log
== TEST (2019-03-12 16:47:30) 
-- CODE:
print(250 / 6 %)
-- ERROR:
File "XXXX", line 1
    print(250 / 6 %)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:49:02) 
-- CODE:
print(250 / 6 )
round(41, 14)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:49:49) 
-- CODE:
print(250 / 6 )
round(41, 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:50:11) 
-- CODE:
print(250 / 6 )
round(41, 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:50:53) 
-- CODE:
print(250 / 6 )
round(41, 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:52:10) 
-- CODE:
print(250 / 6(round(41, 2))
-- ERROR:
File "XXXX", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:52:20) 
-- CODE:
print(250 / 6 (round(41, 2))
-- ERROR:
File "XXXX", line 2
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:53:16) 
-- CODE:
print(250 / 6 (round(41.66666667, 2))
-- ERROR:
File "XXXX", line 2
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:53:49) 
-- CODE:
print(250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:55:37) 
-- CODE:
print(250 / 6)
round(41.666666666666664, 2)
print(250 / 6 round(round(41.666666666666664, 2))
-- ERROR:
File "XXXX", line 3
    print(250 / 6 round(round(41.666666666666664, 2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:55:56) 
-- CODE:
print(250 / 6)
round(41.666666666666664, 2)
print(250 / 6 (round(41.666666666666664, 2))
-- ERROR:
File "XXXX", line 4
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:56:32) 
-- CODE:
print(250 // 6)

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 16:56:35) 
-- CODE:
print(250 // 6)

-- EXECUTION TIME:
0.146982
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:57:29) 
-- CODE:
round(250 / 6)

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:44:13) 
-- CODE:
print(250 / 6)
round(41,67, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(41,67, 2)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:55:46) 
-- CODE:
a = 250/6
print(round(a,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:56:00) 
-- CODE:
a = 250/6
print(round(a,2))
-- EXECUTION TIME:
0.203673
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
